# oct2py

./: .buildinfo  .coveragerc  .coveralls.yml  .flake8  .git-blame-ignore-revs  .gitignore  .hgtags  .markdown_link_config.json  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CHANGES.txt  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTORS.md  CONTRIBUTORS.rst  HISTORY.rst  INSTALL.txt  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  README.txt  asv.conf.json  authors.txt  codecov.yml  development.txt  faq.txt  foo.m  genindex.html  h5read.py  h5write.py  helpers.py  index.html  justfile  mkdocs.yml  (+24 more)
.cache/v/cache/: lastfailed
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: check-release.yml  codeql.yml  enforce-label.yml  pre-commit-autoupdate.yml  publish-changelog.yml  publish-release.yml  release.yml  tests.yml
_modules/: index.html  oct2py.html
_modules/oct2py/: core.html  io.html  utils.html
_sources/: index.txt
_sources/source/: api.rst.txt  api.txt  conversions.txt  demo.rst.txt  demo.txt  examples.txt  info.rst.txt  info.txt  installation.rst.txt  installation.txt
benchmarks/: benchmarks.py
binder/: apt.txt  environment.yml  postBuild  start
conda/oct2py-3.1.0/: meta.yaml
doc/: Makefile  code.rst  conf.py  conversions.rst  demo.rst  examples.rst  index.rst  make.bat  reference.rst
docs/: .buildinfo  Makefile  api.md  conf.py  conversions.md  demo.md  environment.yml  examples.md  genindex.html  index.html  index.rst  info.md  installation.md  notebook.ipynb  objects.inv  py-modindex.html  reference.rst  search.html  searchindex.js  settings.md
docs/_modules/: index.html  oct2py.html
docs/_modules/oct2py/: session.html  utils.html
docs/_sources/: index.txt
docs/_sources/source/: api.txt  conversions.txt  demo.txt  examples.txt  installation.txt
docs/_templates/: layout.html
docs/documentation/: api.rst
docs/source/: api.html  api.rst  conf.py  conversions.html  conversions.rst  demo.html  demo.rst  examples.html  examples.rst  index.rst  info.html  info.rst  installation.html  installation.rst
example/: demo.txt  octavemagic_extension.ipynb  roundtrip.m  roundtrip.py  test_datatypes.m  test_datatypes.py
example/example/: octavemagic_extension.ipynb  roundtrip.m  test_datatypes.py
licenses/: mlabwrap.txt  numpydoc.txt  octavemagic.txt  ompc.txt  spyder.txt
oct2py/: __init__.py  _h5read.py  _h5write.py  _make_figs.m  _matread.py  _matwrite.py  _oct2py.py  _pyeval.m  _utils.py  _version.py  check.py  compat.py  core.py  demo.py  dynamic.py  h5write.py  helpers.py  io.py  matread.py  matwrite.py  session.py  settings.py  speed_check.py  speed_test.py  test_oct2py.py  thread_check.py  thread_test.py  utils.py
oct2py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
oct2py/ipython/: __init__.py  ipython-COPYING.txt  octavemagic.py
oct2py/ipython/tests/: __init__.py  test_octavemagic.py
oct2py/tests/: __init__.py  all_tests.py  oct2py_test.py  pyeval_like_error0.m  pyeval_like_error1.m  pyeval_like_error2.m  pyeval_like_error3.m  roundtrip.m  test_conversions.py  test_datatypes.m  test_misc.py  test_nodocstring.m  test_numpy.py  test_oct2py.py  test_roundtrip.py  test_usage.py
oct2py/tests/@polynomial/: display.m
scripts/: test-opencv.py
source/: api.html  conversions.html  demo.html  examples.html  info.html  installation.html
tests/: NoDefaultCtorClass.m  SimpleObj.m  pyeval_like_error0.m  pyeval_like_error1.m  script_error.m  test_conversions.py  test_core_branches.py  test_datatypes.m  test_dynamic_branches.py  test_keep_matlab_shapes.py  test_misc.py  test_numpy.py  test_octave_script.m  test_octave_script_argv.m  test_octavemagic.py  test_recurse.m  test_roundtrip.py  test_settings.py  test_usage.py
tests/@polynomial/: display.m
tests/ipython/: test_octavemagic.py
