[build-system]
requires = ["hatchling>=1.5"]
build-backend = "hatchling.build"

[project]
name = "oct2py"
dynamic = ["version"]
description = "'Python to GNU Octave bridge --> run m-files from python.'"
license = {text = "MIT"}
authors = [{name = "Steven Silvester", email = "steven.silvester@ieee.org"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
requires-python = ">=3.10"
dependencies = [
    "numpy >=1.24",
    "scipy >=1.9.0",
    "octave_kernel >= 0.39",
]
readme = "README.md"

[project.urls]
homepage = "https://github.com/blink1073/oct2py"
documentation = "https://blink1073.github.io/oct2py"

[dependency-groups]
dev = [ { include-group = "test" } ]
typing = [
    { include-group = "test" },
    "mypy>=1.15",
    "ipython",
    "pip"
]
test = [
    "pytest<8",
    "pytest-xdist",
    "pandas",
    "scipy",
    "nbconvert",
    "pytest-timeout",
]
cover = [
    { include-group = "test" },
    "coverage",
    "pytest-cov",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
    "mkdocs-jupyter>=0.24",
]

[tool.jupyter-releaser.hooks]
before-build-python = ["sudo apt-get update", "sudo apt-get install -qq octave octave-signal octave-dev"]
before-check-links = ["sudo apt-get update", "sudo apt-get install -qq octave octave-signal octave-dev"]

[tool.hatch.version]
path = "oct2py/_version.py"


[tool.pytest.ini_options]
minversion = "6.0"
log_level = "INFO"
xfail_strict = true
log_cli_level = "info"
addopts = [
  "-ra", "--durations=10", "--color=yes", "--doctest-modules",
   "--showlocals", "--strict-markers", "--strict-config"
]
testpaths = ["tests", "tests/ipython"]
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL"
timeout = 300
# Restore this setting to debug failures
# timeout_method = "thread"
filterwarnings= [
  # Fail on warnings
  "error",
  # Ignore our own user warnings
  "ignore:Using deprecated:UserWarning:tests",
  "ignore:Key - value pairs:UserWarning:tests",
  "module:Jupyter is migrating its paths:DeprecationWarning",
  "module:datetime.datetime.utcf:DeprecationWarning",
  "ignore:(?s).*Pyarrow will become a required dependency of pandas:DeprecationWarning",  # pandas pyarrow (pandas<3.0),
  "module:Parsing dates involving a day of month without a year specified:DeprecationWarning", # ipykernel
  "module:codecs.open:DeprecationWarning", # ipykernel
]

[tool.coverage.run]
relative_files = true
source = ["oct2py"]
omit = [
  "tests/*",
]

[tool.mypy]
strict = true
disable_error_code = ["no-untyped-call", "no-untyped-def"]
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
pretty = true
show_error_context = true
warn_unreachable = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "A", "B", "C", "DTZ", "E", "EM", "F", "FBT", "I", "ICN", "N",
  "PLC", "PLE", "PLR", "PLW", "Q", "RUF", "S", "SIM", "T", "TID", "UP",
  "W", "YTT",
]
external = [
  "DOC",  # pydoclint
]
ignore = [
# Q000 Single quotes found but double quotes preferred
"Q000",
# FBT001 Boolean positional arg in function definition
"FBT001", "FBT002", "FBT003",
# C901 `async_setup_kernel` is too complex (12)
"C901",
# C408 Unnecessary `dict` call (rewrite as a literal)
"C408", "C409",
# Unnecessary upgrades
"UP031"
]

[tool.ruff.lint.per-file-ignores]
# S101 Use of `assert` detected
# N806 Variable `V` in function should be lowercase
# PLR2004 Magic value used in comparison
# SIM114 Combine `if` branches
# PLR0912 Too many branches
"tests/*" = ["S101", "N806", "PLR2004", "SIM114",
              "PLR0912", "RUF059", "E721", "PLC0415", "EM101"]
"*.ipynb" = ["B018", "T201", "F821"]

[tool.interrogate]
ignore-init-module=true
ignore-init-method = true
ignore-private=true
ignore-semiprivate=true
ignore-property-decorators=true
ignore-nested-functions=true
ignore-nested-classes=true
fail-under=100
exclude = ["tests", "docs"]

[tool.repo-review]
ignore = ["PC111", "PC140", "PC170", "PY007", "PC901", "PC902", "PC903"]

[tool.pydoclint]
style = 'numpy'
arg-type-hints-in-signature = false
check-return-types = false
allow-init-docstring = true
skip-checking-raises = true
native-mode-noqa-location = "docstring"
