[metadata]
name = oct2py
version = attr: oct2py._version.__version__
description = 'Python to GNU Octave bridge --> run m-files from python.'
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
author = 'Steven Silvester'
author_email = 'steven.silvester@ieee.org'
url = 'http://github.com/blink1073/oct2py'
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Software Development

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    numpy >=1.12
    scipy >=0.17
    octave_kernel >= 0.31.0

[options.extras_require]
test = pytest;pandas;nbconvert
docs = sphinx;sphinx-bootstrap-theme;numpydoc

[bdist_wheel]
universal=1


[build_sphinx]
source-dir = docs
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html

[wheel]
universal = 1

