[metadata]
name = oct2py
version = attr: oct2py._version.__version__
description = 'Python to GNU Octave bridge --> run m-files from python.'
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
author = Steven Silvester
author_email = steven.silvester@ieee.org
url = http://github.com/blink1073/oct2py
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Software Development

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    numpy >=1.12
    scipy >=0.17
    octave_kernel >= 0.34.0

[options.extras_require]
test =
    pytest
    pandas
    nbconvert
    pytest-timeout
    pre-commit
docs =
    sphinx
    sphinx-bootstrap-theme
    numpydoc

[build_sphinx]
source-dir = docs
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html

[flake8]
ignore = E501, W503, E402
builtins = c, get_config
exclude =
    .cache,
    .github,
    docs,
    setup.py
enable-extensions = G
extend-ignore =
    G001, G002, G004, G200, G201, G202,
    # black adds spaces around ':'
    E203,
per-file-ignores =
    # B011: Do not call assert False since python -O removes these calls
    # F841 local variable 'foo' is assigned to but never used
    tests/*: B011, F841
